[package]
name = "rusty-bot"
version = "0.1.0"
authors = ["Will Fombin <njundongw@gmail.com>"]
edition = "2018"


[dependencies]
async-trait = "0.1.50"
base64-url = "1.4.10"
chrono = "0.4"
dotenv = "0.15"
itertools="0.10.0"
linked_hash_set = "0.1.4"
maplit = "1.0.2"
serde = "1.0"
serde_json = "1.0"
serenity = "0.10"
rand = "0.8.3"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread", "time"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[profile.release]
lto = true