[package]
name = "rusty-bot"
version = "0.1.0"
authors = ["Will Fombin <njundongw@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.50"
chrono = "0.4"
dotenv = "0.15"
itertools="0.10.0"
linked_hash_set = "0.1.4"
sys-info = "0.7"
rand = "0.8.3"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["tokio-runtime"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread", "time"]

[profile.release]
lto = true