[package]
name = "rusty-bot"
version = "0.1.0"
authors = ["Will Fombin <njundongw@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
dotenv = "0.15"
futures = "0.3"
itertools = "0.10.0"
linked_hash_set = "0.1.4"
nanoid = "0.4.0"
sys-info = "0.7"
rand = "0.8.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.chrono]
version = "0.4"
features = [ "serde", ]

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["bson-chrono-0_4", "tokio-runtime"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["cache", "chrono", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread", "time"]

[profile.release]
lto = true